--- a/Services/SqlClient.CommandsBase.findmyfamilies.config
+++ b/Services/SqlClient.CommandsBase.findmyfamilies.config
@@ -38,13 +38,14 @@
 		<parameters>
 			<param name="@report_date" type="DateTime" size="8" direction="Input" />
 			<param name="@language_id" type="VarChar" size="10" direction="Input" />
-			<param name="@report_by" type="VarChar" size="15" direction="Input" />
+			<param name="@user_id" type="VarChar" size="10" direction="Input" />
+			<param name="@person_id" type="VarChar" size="10" direction="Input" />
+			<param name="@person_name" type="VarChar" size="50" direction="Input" />
 			<param name="@report_file" type="NVarChar" size="200" direction="Input" />
 			<param name="@report_description" type="VarChar" size="200" direction="Input" />
-			<param name="@emailed" type="Bit" size="1" direction="Input" />
-			<param name="@private" type="NVarChar" size="200" direction="Input" />
-			<param name="@private_view" type="NVarChar" size="200" direction="Input" />
-			<param name="@report_type" type="VarChar" size="20" direction="Input" />
+			<param name="@records" type="VarChar" size="4" direction="Input" />
+			<param name="@research_type" type="VarChar" size="15" direction="Input" />
+			<param name="@generation" type="VarChar" size="1" direction="Input" />
 		</parameters>
 	</dataCommand>
 	<dataCommand name="UpdateReport" type="StoredProcedure">
@@ -53,12 +54,14 @@
 			<param name="@report_id" type="Int" size="4" direction="Input" />
 			<param name="@report_date" type="DateTime" size="8" direction="Input" />
 			<param name="@language_id" type="VarChar" size="10" direction="Input" />
-			<param name="@report_by" type="VarChar" size="15" direction="Input" />
+			<param name="@user_id" type="VarChar" size="10" direction="Input" />
+			<param name="@person_id" type="VarChar" size="10" direction="Input" />
+			<param name="@person_name" type="VarChar" size="50" direction="Input" />
 			<param name="@report_file" type="NVarChar" size="200" direction="Input" />
 			<param name="@report_description" type="VarChar" size="200" direction="Input" />
-			<param name="@emailed" type="Bit" size="1" direction="Input" />
-			<param name="@private" type="NVarChar" size="200" direction="Input" />
-			<param name="@private_view" type="NVarChar" size="200" direction="Input" />
+			<param name="@records" type="VarChar" size="4" direction="Input" />
+			<param name="@research_type" type="VarChar" size="15" direction="Input" />
+			<param name="@generation" type="VarChar" size="1" direction="Input" />
 		</parameters>
 	</dataCommand>
 	<dataCommand name="DeleteReport" type="StoredProcedure">
@@ -73,11 +76,11 @@
 			<param name="@report_id" type="Int" size="4" direction="Input" />
 		</parameters>
 	</dataCommand>
-    <dataCommand name="ReadReportsByReportBy" type="StoredProcedure">
-        <commandText>cl_Report_Read_By_Report</commandText>
+    <dataCommand name="ReadReportsByUser" type="StoredProcedure">
+        <commandText>cl_Report_Read_By_User</commandText>
         <parameters>
-            <param name="@report_by" type="VarChar" size="15" direction="Input" />
-            <param name="@report_type" type="VarChar" size="15" direction="Input" />
+            <param name="@user_id" type="VarChar" size="10" direction="Input" />
+            <param name="@research_type" type="VarChar" size="15" direction="Input" />
             <param name="@language_id" type="VarChar" size="10" direction="Input" />
         </parameters>
     </dataCommand>
