Add google search feature

--- a/Services/App.config
+++ b/Services/App.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-<!--    <add key="FAMILY_SEARCH_SYSTEM" value="https://sandbox.familysearch.org"/>  -->
-    <add key="FAMILY_SEARCH_SYSTEM" value="https://beta.familysearch.org"/>
+<!--    <add key="FAMILY_SEARCH_SYSTEM" value="https://beta.familysearch.org"/>  -->
+    <add key="FAMILY_SEARCH_SYSTEM" value="https://sandbox.familysearch.org"/>
      <add key="CONNECTION_STRING" value="server=LOCALHOST;uid=fmfadmin;pwd=X78UT56;database=findmyfamilies"/>
     <add key="DISCOVERY_PATH" value=".well-known/app-meta"/>
     <add key="FAMILY_SEARCH_SYSTEM_ONLINE" value="false"/>
